<resources>
    <string name="app_name">Assigment2_IrfanArrahman</string>
    <string name="tittle">Diary Apps</string>
    <string name="login">Login</string>
    <string name="hint_input_email">Input your Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="add">Add</string>
    <string name="input_diary">Input Diary contents</string>
    <string name="input_tittle">Input the tittle</string>
    <string name="the_data_is_empty">The Data is Empty</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="hint_input_your_password">Input your password</string>
</resources>