<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/color_primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presenter.LoginActivity">

    <TextView
        android:id="@+id/tv_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tittle"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_email"
        android:background="@drawable/bg_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:boxBackgroundMode="none"
        app:layout_constraintTop_toBottomOf="@id/tv_tittle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_input_email" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_passowrd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="none"
        android:background="@drawable/bg_edit_text"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/ti_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_input_your_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        app:backgroundTint="@null"
        android:background="@drawable/bg_button"
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/ti_passowrd" />


</androidx.constraintlayout.widget.ConstraintLayout>