<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".view.UpdateDiaryActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/iv_expresion"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/happy"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@id/ti_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ti_date" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_date"
        android:layout_width="0dp"
        android:background="@drawable/bg_edit_text"
        app:boxBackgroundMode="none"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toStartOf="@id/iv_expresion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_edit_text"
        app:boxBackgroundMode="none"
        app:layout_constraintTop_toBottomOf="@id/ti_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_tittle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/input_tittle" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_desc"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_height="0dp"
        app:boxBackgroundMode="none"
        android:background="@drawable/bg_edit_text"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/btn_add"
        app:layout_constraintTop_toBottomOf="@id/ti_tittle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/input_diary" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        app:backgroundTint="@null"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>